--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </tbody>
     </table>
     <hr>
-    <a href="file:///C:/Users/Lenovo/.cache/tooling/gradle/firstIndex.html" target="_blank">Personal Details</a>
+    <a href="file:///C:/Users/Lenovo/.cache/tooling/gradle/firstIndex.html" target="blank">Personal Details</a>
     <a href=""></a>
 
 </body>
